# mycraft-rust

./: README.md
mycraft/: Cargo.toml
mycraft/src/: main.rs
mycraft/src/game/: block_renderer.rs  camera.rs  controller.rs  mod.rs  scene.rs
mycraft/src/graphics/: bind_group.rs  buffer.rs  drawable.rs  material.rs  mod.rs  model.rs  perspective.rs  raw_model.rs  render_pipeline.rs  resources.rs  state.rs
mycraft/src/graphics/shaders/: shader.wgsl
mycraft/src/world/: biome.rs  block.rs  chunk.rs  mod.rs
