[package]
name = "mycraft"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.9.0"
winit = { version = "0.29.15", features = ["rwh_05"] }
log = "0.4.26"
wgpu = "24.0.1"
pollster = "0.4.0"
image = "0.25.5"
bytemuck = { version = "1.21.0", features = [ "derive" ] }
anyhow = "1.0.96"
cgmath = "0.18.0"
instant = "0.1.13"

[build-dependencies]
anyhow = "1.0.96"
fs_extra = "1.3.0"
